Finished Calendar page.

--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -1825,6 +1825,18 @@ section.pro-shop-body {
       }
     }
   }
+  .schedule-note {
+    font-size: 18px;
+    color: grey;
+    width: 600px;
+    margin: 0 auto;
+  }
+}
+
+//~ Calendar
+.calendar-page-body {
+  padding-top: 17rem;
+  padding-bottom: 12rem;
 }
 
 //* ===================================================
