--- a/assets/scss/elements/_awards.scss
+++ b/assets/scss/elements/_awards.scss
@@ -60,7 +60,7 @@
   position: relative;
   padding-top: 5rem;
   padding-bottom: 5rem;
-
+  margin-top: 5rem;
   //   background-color: yellow;
   &::before {
     content: "";
